--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <!-- Fixed side menu with sections and sub-sections -->
             <h3 class="section" onclick="toggleSection('models')">MODELS</h3>
             <ul id="models" class="submenu">
-                <li><a href="#" onclick="loadModel('GPT')">GPT</a></li>
-                <li><a href="#" onclick="loadModel('Llama')">Llama</a></li>
+                <li><a href="./" onclick="loadModel('GPT')">GPT</a></li>
+                <li><a href="/" onclick="loadModel('Llama')">Llama</a></li>
                 <li><a href="#" onclick="loadModel('Claude')">Claude</a></li>
                 <li><a href="#" onclick="loadModel('Gemini')">Gemini</a></li>
             </ul>
